semcore/tab-line/src/style/tab-line.shadow.css
@import '@semcore/utils/style/var.css';

STabLine {
  position: relative;
  display: flex;
  width: 100%;
  max-width: 100%;
}

STabLine[underlined] {
  border-bottom: 1px solid var(--gray-200);
}

STabLineItem {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  position: relative;
  touch-action: manipulation;
  white-space: nowrap;
  user-select: none;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  box-shadow: none;
  outline: none;
  text-decoration: none;
  -webkit-tap-highlight-color: transparent;
  overflow: visible;
  outline: 0;
  text-align: center;
  vertical-align: middle;
  font-family: inherit;
  cursor: pointer;
  border: none;
  background: transparent;
  color: var(--gray-800);
  margin-right: 16px;

  &::-moz-focus-inner {
    border: none;
    padding: 0;
  }

  &:active,
  &:hover,
  &:focus {
    outline: 0;
    text-decoration: none;
  }

  &::after {
    content: '';
    left: 0;
    width: 100%;
    background-color: transparent;
    transition: background-color 0.2s;
  }

  &:hover::after {
    background-color: var(--gray-200);
  }

  & SText:not(:last-child) {
    margin-right: 8px;
  }

  & SAddon:not(:last-child) {
    margin-right: 8px;
  }
}

SIndicator,
STabLineItem::after {
  position: absolute;
  display: block;
  bottom: -1px;
  height: 2px;
}

SIndicator {
  transition: transform 0.5s ease;
  background-color: var(--blue-400);
  will-change: transform;
}

STabLineItem[selected] {
  flex-shrink: 0;
}

STabLineItem[disabled] {
  opacity: var(--disabled-opacity);
  cursor: default;
  pointer-events: none; /* Disable link interactions */
}

STabLineItem[keyboardFocused] {
  box-shadow: var(--keyboard-focus);
}

SText {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

SAddon {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

STabLineItem[size='m'] {
  height: 28px;
  min-width: 18px;
  font-size: var(--fs-200);
}

STabLineItem[size='l'] {
  height: 40px;
  min-width: 26px;
  font-size: var(--fs-300);
}

STabLineItem[neighborLocation='left'] {
  margin-right: 0;
}

@media (prefers-reduced-motion) {
  STabLineItem {
    &::after {
      transition: none;
    }
  }

  SIndicator {
    transition: none;
  }
}

